fix: (aiact-253) Update spacing between flows and separator from 8px to 12px (#8326)

--- a/src/pages/automate/connectedChannels/components/FlowSettingsItem.less
+++ b/src/pages/automate/connectedChannels/components/FlowSettingsItem.less
@@ -19,8 +19,8 @@
         flex-direction: column;
         gap: var(--layout-spacing-xxs);
         &:not(:last-child) {
-            padding-bottom: var(--layout-spacing-xs);
-            margin-bottom: var(--layout-spacing-xs);
+            padding-bottom: 12px;
+            margin-bottom: 12px;
             border-bottom: 1px solid var(--neutral-grey-2);
         }
     }
